--- a/views/vehicle-registration-form.ejs
+++ b/views/vehicle-registration-form.ejs
@@ -115,11 +115,11 @@
 
 						<div class="btn-group btn-group-sm pull-right" data-toggle="buttons">
 							<label for="fullServiceHistoryYes" class="btn btn-default">
-								<input type="radio" id="fullServiceHistoryYes"
+								<input type="radio" id="fullServiceHistoryYes" class="bootandbonnet-yes-button"
 									onclick="document.getElementById('fullServiceHistory').value = true;"> Yes
 							</label>
 							<label for="fullServiceHistoryNo" class="btn btn-default">
-								<input type="radio" id="fullServiceHistoryNo"
+								<input type="radio" id="fullServiceHistoryNo" class="bootandbonnet-no-button"
 									onclick="$document.getElementById('fullServiceHistory').value = false;"> No
 							</label>
 						</div>
@@ -189,11 +189,11 @@
 
 						<div class="btn-group btn-group-sm pull-right" data-toggle="buttons">
 							<label for="absBrakesYes" class="btn btn-default">
-								<input type="radio" id="absBrakesYes"
+								<input type="radio" id="absBrakesYes" class="bootandbonnet-yes-button"
 									onclick="document.getElementById('absBrakes').value = true;"> Yes
 							</label>
 							<label for="absBrakesNo" class="btn btn-default">
-								<input type="radio" id="absBrakesNo"
+								<input type="radio" id="absBrakesNo" class="bootandbonnet-no-button"
 									onclick="document.getElementById('absBrakes').value = false;"> No
 							</label>
 						</div>
@@ -213,11 +213,11 @@
 
 						<div class="btn-group btn-group-sm pull-right" data-toggle="buttons">
 							<label for="powerSteeringYes" class="btn btn-default">
-								<input type="radio" id="powerSteeringYes"
+								<input type="radio" id="powerSteeringYes" class="bootandbonnet-yes-button"
 									onclick="document.getElementById('powerSteering').value = true;"> Yes
 							</label>
 							<label for="powerSteeringNo" class="btn btn-default">
-								<input type="radio" id="powerSteeringNo"
+								<input type="radio" id="powerSteeringNo" class="bootandbonnet-no-button"
 									onclick="document.getElementById('powerSteering').value = false;"> No
 							</label>
 						</div>
@@ -257,11 +257,11 @@
 
 						<div class="btn-group btn-group-sm pull-right" data-toggle="buttons">
 							<label for="airConditioningYes" class="btn btn-default">
-								<input type="radio" id="airConditioningYes"
+								<input type="radio" id="airConditioningYes" class="bootandbonnet-yes-button"
 									onclick="document.getElementById('airConditioning').value = true;"> Yes
 							</label>
 							<label for="airConditioningNo" class="btn btn-default">
-								<input type="radio" id="airConditioningNo"
+								<input type="radio" id="airConditioningNo" class="bootandbonnet-no-button"
 									onclick="document.getElementById('airConditioning').value = false;"> No
 							</label>
 						</div>
@@ -281,11 +281,11 @@
 
 						<div class="btn-group btn-group-sm pull-right" data-toggle="buttons">
 							<label for="cdPlayerYes" class="btn btn-default">
-								<input type="radio" id="cdPlayerYes"
+								<input type="radio" id="cdPlayerYes" class="bootandbonnet-yes-button"
 									onclick="document.getElementById('cdPlayer').value = true;"> Yes
 							</label>
 							<label for="cdPlayerNo" class="btn btn-default">
-								<input type="radio" id="cdPlayerNo"
+								<input type="radio" id="cdPlayerNo" class="bootandbonnet-no-button"
 									onclick="document.getElementById('cdPlayer').value = false;"> No
 							</label>
 						</div>
@@ -305,11 +305,11 @@
 
 						<div class="btn-group btn-group-sm pull-right" data-toggle="buttons">
 							<label for="radioYes" class="btn btn-default">
-								<input type="radio" id="radioYes"
+								<input type="radio" id="radioYes" class="bootandbonnet-yes-no-button"
 									onclick="document.getElementById('radio').value = true;"> Yes
 							</label>
 							<label for="radioNo" class="btn btn-default">
-								<input type="radio" id="radioNo"
+								<input type="radio" id="radioNo" class="bootandbonnet-yes-no-button"
 									onclick="document.getElementById('radio').value = false;"> No
 							</label>
 						</div>
@@ -336,11 +336,11 @@
 
 						<div class="btn-group btn-group-sm pull-right" data-toggle="buttons">
 							<label for="alarmYes" class="btn btn-default">
-								<input type="radio" id="alarmYes"
+								<input type="radio" id="alarmYes" class="bootandbonnet-yes-button"
 									onclick="document.getElementById('alarm').value = true;"> Yes
 							</label>
 							<label for="alarmNo" class="btn btn-default">
-								<input type="radio" id="alarmNo"
+								<input type="radio" id="alarmNo" class="bootandbonnet-no-button"
 									onclick="document.getElementById('alarm').value = false;"> No
 							</label>
 						</div>
@@ -360,11 +360,11 @@
 
 						<div class="btn-group btn-group-sm pull-right" data-toggle="buttons">
 							<label for="centralLockingYes" class="btn btn-default">
-								<input type="radio" id="centralLockingYes"
+								<input type="radio" id="centralLockingYes" class="bootandbonnet-yes-button"
 									onclick="document.getElementById('centralLocking').value = true;"> Yes
 							</label>
 							<label for="centralLockingNo" class="btn btn-default">
-								<input type="radio" id="centralLockingNo"
+								<input type="radio" id="centralLockingNo" class="bootandbonnet-no-button"
 									onclick="document.getElementById('centralLocking').value = false;"> No
 							</label>
 						</div>
@@ -384,11 +384,11 @@
 
 						<div class="btn-group btn-group-sm pull-right" data-toggle="buttons">
 							<label for="immobilizerYes" class="btn btn-default">
-								<input type="radio" id="immobilizerYes"
+								<input type="radio" id="immobilizerYes" class="bootandbonnet-yes-button"
 									onclick="document.getElementById('immobilizer').value = true;"> Yes
 							</label>
 							<label for="immobilizerNo" class="btn btn-default">
-								<input type="radio" id="immobilizerNo"
+								<input type="radio" id="immobilizerNo" class="bootandbonnet-no-button"
 									onclick="document.getElementById('immobilizer').value = false;"> No
 							</label>
 						</div>
@@ -408,11 +408,11 @@
 
 						<div class="btn-group btn-group-sm pull-right" data-toggle="buttons">
 							<label for="gearLockYes" class="btn btn-default">
-								<input type="radio" id="gearLockYes"
+								<input type="radio" id="gearLockYes" class="bootandbonnet-yes-button"
 									onclick="document.getElementById('gearLock').value = true;"> Yes
 							</label>
 							<label for="gearLockNo" class="btn btn-default">
-								<input type="radio" id="gearLockNo"
+								<input type="radio" id="gearLockNo" class="bootandbonnet-no-button"
 									onclick="document.getElementById('gearLock').value = false;"> No
 							</label>
 						</div>
@@ -587,11 +587,11 @@
 
 				<div class="btn-group btn-group-sm pull-right" data-toggle="buttons">
 					<label for="negotiableYes" class="btn btn-default">
-						<input type="radio" id="negotiableYes"
+						<input type="radio" id="negotiableYes" class="bootandbonnet-yes-button"
 							onclick="document.getElementById('negotiable').value = true;"> Yes
 					</label>
 					<label for="negotiableNo" class="btn btn-default">
-						<input type="radio" id="negotiableNo"
+						<input type="radio" id="negotiableNo" class="bootandbonnet-no-button"
 							onclick="document.getElementById('negotiable').value = false;"> No
 					</label>
 				</div>
