Fixes errors with previous commit (IssueID #43).

--- a/views/vehicle-registration-form.ejs
+++ b/views/vehicle-registration-form.ejs
@@ -15,11 +15,11 @@
 
 			<div class="btn-group btn-group-sm pull-right" data-toggle="buttons">
 				<label for="marketNew" class="btn btn-default">
-					<input type="radio" id="marketNew"
+					<input type="radio" id="marketNew" class="bootandbonnet-yes-button"
 						onclick="document.getElementById('market').value = 'new';"> New
 				</label>
 				<label for="marketUsed" class="btn btn-default">
-					<input type="radio" id="marketUsed"
+					<input type="radio" id="marketUsed" class="bootandbonnet-no-button"
 						onclick="document.getElementById('market').value = 'used';"> Used
 				</label>
 			</div>
@@ -305,11 +305,11 @@
 
 						<div class="btn-group btn-group-sm pull-right" data-toggle="buttons">
 							<label for="radioYes" class="btn btn-default">
-								<input type="radio" id="radioYes" class="bootandbonnet-yes-no-button"
+								<input type="radio" id="radioYes" class="bootandbonnet-yes-button"
 									onclick="document.getElementById('radio').value = true;"> Yes
 							</label>
 							<label for="radioNo" class="btn btn-default">
-								<input type="radio" id="radioNo" class="bootandbonnet-yes-no-button"
+								<input type="radio" id="radioNo" class="bootandbonnet-no-button"
 									onclick="document.getElementById('radio').value = false;"> No
 							</label>
 						</div>
