--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,7 +4,7 @@
 		<title>Boot&Bonnet</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="/static/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-		<!--<link href="/static/bower_components/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet">-->
+		<link href="/static/bower_components/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet">
 		<%-stylesheets%>
 		<style>
 			body {
