--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -20,7 +20,7 @@
 	</head>
     <body>
 		<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-			<div class="container">
+			<div class="container" style="padding-left: 0; padding-right: 0;">
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 						<span class="sr-only">Toggle navigation</span>
@@ -60,8 +60,9 @@
 			</div>
 		</nav>
 
-		<div class="container">
+		<div class="container" style="padding-left: 0; padding-right: 0;">
 			<%-body -%>
+			<hr>
 		</div>
 		<script src="/static/bower_components/jquery/jquery.min.js"></script>
 		<script src="/static/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
